--- a/aboutus.html
+++ b/aboutus.html
@@ -104,9 +104,10 @@
         </div>
 
         <div class="footer-note">
-            &copy; 2026 Kelas Sejarah Dunia
+            &copy; 2026 Kelas TIK 
         </div>
     </div>
 
 </body>
+
 </html>
